# pygames

./: .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-checks.yaml
src/: .pylintrc  pyproject.toml
src/pygames/game_of_life/: __init__.py  game_of_life.py
src/pygames/game_of_life/ui/: console.py
src/pygames/snake/: __init__.py  snake.py
src/pygames/snake/ui/: console.py
src/tests/: test_game_of_life.py
src/tests/test_game_of_life/: test_game_of_life_terminal.py
src/tests/test_snake/: test_snake.py  test_snake_terminal.py
