[project]
name = "pygames"
description = "Playground with simple Python games"
version = "0.1.0"
authors = [
    { name = "Viktor Vorobev", email = "vikeyer@gmail.com" }
]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.4",
    "pylint-quotes>=0.2.3",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
