[project]
name = "pygames"
description = "Playground with simple Python games"
version = "0.1.0"
authors = [
    { name = "Viktor Vorobev", email = "vikeyer@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "blessed==1.20.0",
]
requires-python = ">=3.11"
[project.scripts]
game-of-life = "pygames.game_of_life.ui.console:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.4",
    "pylint-quotes>=0.2.3",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
