[tool.poetry]
name = "pygames"
version = "0.1.0"
description = "Playground with simple Python games"
authors = ["Viktor Vorobev <vikeyer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"
flake8 = "^6.0.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
